--- a/reporte/FibonacciHeap.tex
+++ b/reporte/FibonacciHeap.tex
@@ -56,6 +56,26 @@
 \begin{document}
 \maketitle
 
-dfdg
-
+\section{Preliminares}
+\subsection{Especificaciones}
+Se presentan las herramientas utilizadas para la construcción del sistema,
+modulos utilizados para llevar acabo la resolución del problema, así como las pruebas del 
+algoritmo.
+\subsubsection{Herramientas}
+\begin{itemize}
+  \item \textbf{Lenguaje de Programación.}\\
+  Haskell
+  \item \textbf{Sistema de Construcción.}\\
+  Cabal (The Common Architecture for Building Applications and Libraries) 2.4.0.0
+  \item \textbf{Documentación.}\\
+  Haddock 2.22.0
+  \item \textbf{Control de versiones.}\\
+  GitHub 2.30.0 \href{https://github.com/ciencias-unam/proyecto-final-kevRicardo}{Fibonacci Heap (Dijkstra y Prim)}
+\end{itemize}
+\subsubsection{Estructura}
+En conjunto con \textbf{Cabal} se realizó la construcción del directorio de la siguiente manera:
+\begin{center}
+  \includegraphics[scale=.5]{img/treepath.png}
+\end{center}
+Donde podemos encontrar la documentación, el ejecutable, así como el reporte de investigación
 \end{document}
